# tp-lab08

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: default.yml
